# minmod-dashboard

./: .dockerignore  .env.template  .gitignore  LICENSE  README.md  app.py  constants.py  critical_minerals.yaml  docker-compose.yml  dockerfile  flat_mineral_site_data.v4.csv  logger_config.py  pyproject.toml  requirements.txt
assets/: dashAgGridComponentFunctions.js  styles.css
components/: __init__.py
components/cards/: geo_map.py  gt_model.py  kpi.py  pie.py
examples/: sparql.example.yaml
helpers/: dataservice_utils.py  exceptions.py  kpis.py  sparql_utils.py
models/: __init__.py  geo.py  gt.py  gt.sql  min.sql  ms.py
models/sql/: ms.sql
pages/: gtmodel.py  mapview.py  mineralsite.py  minmod.py  sparql.py  sparqlsearch.py
