[tool.poetry]
name = "minmod-dashboard"
version = "0.1.0"
description = ""
authors = ["P PUNITH KRISHNA <32421081+punith300i@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
dash = ">=2.16.1"
flask = "2.1.0"
plotly = "5.3.1"
pandas = ">=1.4.0,<2.0.0"
numpy = ">=1.21.2,<2.0.0"
markupsafe = "2.0.1"
requests = "2.28.1"
pyopenssl = ">=24.0.0"
dash-ag-grid = "31.0.0"
monaco-editor = "0.0.2"
pyyaml = ">=6.0.0"
geopandas = "1.0.1"
gunicorn = "22.0.0"
aiohttp = "3.8.4"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
